# autoperm

./: Cargo.toml  README.md  explanation.md
.github/: codecov.yml
.github/workflows/: check.yml  main.yml  test.yml
src/: lib.rs  main.rs  model.rs  models.rs  parse.rs  solve.rs  test.rs
