[package]
name = "autoperm"
version = "0.1.4"
edition = "2021"
description = "A tool for generating brainfuck programs that apply stack effect diagrams"
license = "GPL-3.0-or-later"
license_file = "LICENSE"
repository = "https://github.com/Alextopher/autoperm"
keywords = ["brainfuck"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"], optional = true }
itertools = "0.10.3"
petgraph = "0.6"

[dev-dependencies]
bfi = { git = "https://github.com/Alextopher/bfi.git", branch = "main" }
quickcheck = "1"
quickcheck_macros = "1"

[[bin]]
name = "autoperm"
required_features = ["dep:clap"]
