[package]
name = "autoperm"
version = "0.3.0"
edition = "2021"
description = "A tool for generating brainfuck programs that apply stack effect diagrams"
license = "GPL-3.0-or-later"
repository = "https://github.com/Alextopher/autoperm"
keywords = ["brainfuck"]

[dependencies]
itertools = "0.14"
petgraph = "0.6"

[dev-dependencies]
bfi = { git = "https://github.com/Alextopher/bfi.git", branch = "main" }
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"

[[bin]]
name = "autoperm"
